--- a/src/style/router/teacher-center.scss
+++ b/src/style/router/teacher-center.scss
@@ -452,6 +452,7 @@ html {
           top: 0;
           width: 100%;
           height: 100%;
+          cursor: pointer;
           display: flex;
           align-items: center;
           justify-content: center;
@@ -476,6 +477,234 @@ html {
         font-size: 14px;
         color: $TEXT_666;
         text-align: center;
+      }
+    }
+  }
+  //honor
+  .cont-honor {
+    padding: 0 20px;
+    .honor-block {
+      .block-head {
+        height: 75px;
+        padding-left: 10px;
+        padding-right: 65px;
+        border-bottom: 1px solid $Bd_COLOR;
+        line-height: 100px;
+        font-size: 16px;
+        color: $TEXT_666;
+      }
+      .warning {
+        color: #f95710;
+      }
+      .prompt {
+        color: $TEXT_COLO;
+      }
+      .add {
+        width: 54px;
+        height: 36px;
+        margin-top: 20px;
+        border: 1px solid $THEME_COLOR;
+        outline: none;
+        cursor: pointer;
+        background: transparent;
+        border-radius: 2px;
+        -webkit-appearance: none;
+        -moz-appearance: none;
+        appearance: none;
+        font-size: 14px;
+        color: $THEME_COLOR;
+      }
+    }
+    .honor-item {
+      border-bottom: 1px dashed $Bd_COLOR;
+      .ctn {
+        display: flex;
+        align-items: center;
+        height: 74px;
+        padding: 0 20px;
+        font-size: 14px;
+        color: $TEXT_666;
+      }
+      .hd {
+        width: 300px;
+        .iconfont {
+          margin-right: 5px;
+          font-size: 20px;
+          color: $Bd_COLOR;
+          vertical-align: middle;
+        }
+      }
+      .bd {
+        flex: 1;
+      }
+      .ft {
+        width: 150px;
+        text-align: center;
+      }
+      .btn {
+        width: 54px;
+        height: 36px;
+        outline: none;
+        border: none;
+        border-radius: 2px;
+        background: transparent;
+        cursor: pointer;
+        -webkit-appearance: none;
+        -moz-appearance: none;
+        appearance: none;
+        font-size: 14px;
+        color: #fff;
+        &.attest {
+          background: $TEXT_ORANGE;
+        }
+        &.save {
+          margin-right: 15px;
+          background: $THEME_COLOR;
+        }
+        &.cancel {
+          border: 1px solid $Bd_COLOR;
+          color: $TEXT_666;
+        }
+      }
+      .honor-form {
+        display: flex;
+        padding: 30px 46px;
+      }
+      .img {
+        width: 150px;
+        height: 120px;
+        overflow: hidden;
+        position: relative;
+        background: #e8e8e8;
+        .file {
+          position: absolute;
+          left: 0;
+          top: 0;
+          width: 100%;
+          height: 100%;
+          cursor: pointer;
+          z-index: 3;
+          opacity: 0;
+        }
+        .ft-tit {
+          width: 100%;
+          height: 34px;
+          position: absolute;
+          left: 0;
+          bottom: 0;
+          z-index: 2;
+          background: #747474;
+          font-size: 14px;
+          color: #fff;
+          text-align: center;
+          line-height: 34px;
+        }
+      }
+      .detail {
+        flex: 1;
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        margin-left: 110px;
+        p {
+          font-size: 14px;
+          color: $TEXT_COLO;
+        }
+        .actions {
+          margin-top: 20px;
+        }
+      }
+    }
+    .add-history {
+      display: none;
+      padding-left: 10px;
+      margin-top: 20px;
+      padding-bottom: 40px;
+      border-bottom: 1px dashed $Bd_COLOR;
+      .choose-time {
+        float: left;
+        margin-right: 20px;
+      }
+      .time-tit {
+        margin-bottom: 10px;
+        font-size: 14px;
+        color: $TEXT_666;
+      }
+      .select {
+        width: 80PX;
+        height: 36px;
+        margin-right: 10px;
+        padding-left: 10px;
+        border: 1px solid $Bd_COLOR;
+        border-radius: 2px;
+        outline: none;
+        cursor: pointer;
+        background: transparent;
+        -webkit-appearance: none;
+        -moz-appearance: none;
+        appearance: none;
+      }
+      .textarea {
+        margin-top: 15px;
+        .text {
+          margin-bottom: 5px;
+          font-size: 14px;
+          color: $TEXT_666;
+        }
+        textarea {
+          width: 700px;
+          height: 100px;
+          padding: 5px;
+          background: transparent;
+          outline: none;
+          border: 1px solid $Bd_COLOR;
+          border-radius: 2px;
+          resize: none;
+          word-break: break-all;
+          font-size: 14px;
+          color: $TEXT_666;
+          line-height: 1.4;
+        }
+      }
+      .buttons {
+        margin-top: 10px;
+      }
+      .btn {
+        width: 54px;
+        height: 36px;
+        outline: none;
+        border: none;
+        border-radius: 2px;
+        background: transparent;
+        cursor: pointer;
+        -webkit-appearance: none;
+        -moz-appearance: none;
+        appearance: none;
+        font-size: 14px;
+        color: #fff;
+        &.attest {
+          background: $TEXT_ORANGE;
+        }
+        &.save {
+          margin-right: 15px;
+          background: $THEME_COLOR;
+        }
+        &.cancel {
+          border: 1px solid $Bd_COLOR;
+          color: $TEXT_666;
+        }
+      }
+    }
+    .history-list {
+      padding-bottom: 40px;
+      li {
+        padding: 15px;
+        border-bottom: 1px dashed $Bd_COLOR;
+        font-size: 14px;
+        color: $TEXT_COLO;
+      }
+      .time {
+        color: $TEXT_666;
       }
     }
   }
