--- a/src/style/router/teacher-center.scss
+++ b/src/style/router/teacher-center.scss
@@ -708,4 +708,100 @@ html {
       }
     }
   }
+  //identity-set
+  .cont-identity-set {
+    padding: 0 20px;
+    .prompt-box {
+      margin-top: 20px;
+      font-size: 14px;
+      .prompt-tit {
+        color: $TEXT_666;
+      }
+      p {
+        color: $TEXT_COLO;
+      }
+      .iconfont {
+        margin-right: 5px;
+        vertical-align: middle;
+        font-size: 16px;
+        color: #f89303;
+      }
+    }
+    .form-item {
+      display: flex;
+      margin-top: 20px;
+      .name {
+        width: 140px;
+        height: 36px;
+        margin-right: 10px;
+        line-height: 36px;
+        font-size: 14px;
+        color: $TEXT_666;
+        text-align: right;
+        i {
+          color: #fb0202;
+        }
+      }
+      .txt {
+        width: 187px;
+        height: 36px;
+        border: 1px solid $Bd_COLOR;
+        border-radius: 2px;
+        outline: none;
+        background: transparent;
+      }
+      .upload-img {
+        width: 245px;
+        height: 150px;
+        overflow: hidden;
+        position: relative;
+        background: #e8e8e8;
+      }
+      .upload-tit {
+        width: 100%;
+        height: 34px;
+        position: absolute;
+        left: 0;
+        bottom: 0;
+        z-index: 2;
+        background: #747474;
+        overflow: hidden;
+        white-space: nowrap;
+        text-overflow: ellipsis;
+        line-height: 34px;
+        text-align: center;
+        font-size: 14px;
+        color: #fff;
+      }
+      .file {
+        position: absolute;
+        left: 0;
+        top: 0;
+        z-index: 3;
+        width: 100%;
+        height: 100%;
+        opacity: 0;
+        cursor: pointer;
+      }
+      .btn {
+        width: 150px;
+        height: 36px;
+        margin-right: 20px;
+        background: transparent;
+        border: none;
+        outline: none;
+        border-radius: 2px;
+        cursor: pointer;
+        font-size: 14px;
+        color: #fff;
+        &.save {
+          background: $THEME_COLOR;
+        }
+        &.cancel {
+          border: 1px solid $Bd_COLOR;
+          color: $TEXT_666;
+        }
+      }
+    }
+  }
 }
