--- a/src/style/router/teacher-center.scss
+++ b/src/style/router/teacher-center.scss
@@ -407,6 +407,20 @@ html {
         margin: 0 5px;
         color: $TEXT_ORANGE;
       }
+      .action {
+        display: block;
+        width: 90px;
+        height: 30px;
+        margin-top: 17px;
+        border: 1px solid $THEME_COLOR;
+        line-height: 28px;
+        text-align: center;
+        color: $THEME_COLOR;
+        font-size: 16px;
+        i {
+          font-size: 18px;
+        }
+      }
     }
     .images {
       margin: 0 10px;
@@ -809,6 +823,162 @@ html {
           color: $TEXT_666;
         }
       }
+    }
+  }
+  //add-course
+  .cont-add-course {
+    padding: 0 20px;
+    .info-box {
+      padding-bottom: 50px;
+    }
+    .title-box {
+      height: 18px;
+      padding-left: 10px;
+      margin: 18px 8px;
+      border-left: 3px solid #ccc7c6;
+      font-size: 20px;
+      color: $TEXT_666;
+      line-height: 18px;
+    }
+    .block-item {
+      display: flex;
+      margin-top: 20px;
+      font-size: 14px;
+      color: $TEXT_666;
+    }
+    .name {
+      width: 110px;
+      height: 36px;
+      text-align: right;
+      line-height: 36px;
+    }
+    .txt {
+      width: 700px;
+      height: 36px;
+      padding: 5px;
+      border: 1px solid $Bd_COLOR;
+      border-radius: 2px;
+      background: transparent;
+      outline: none;
+      resize: none;
+      -webkit-appearance: none;
+      -moz-appearance: none;
+      appearance: none;
+      cursor: pointer;
+    }
+    .tct {
+      width: 180px;
+    }
+    .textarea {
+      height: 110px;
+      cursor: default;
+    }
+    .tct-tit {
+      height: 36px;
+      margin-left: 46px;
+      margin-right: 15px;
+      line-height: 36px;
+    }
+    .price-box {
+      display: flex;
+      height: 36px;
+      border: 1px solid $Bd_COLOR;
+      border-radius: 2px;
+      .yuan {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 40px;
+        border-left: 1px solid $Bd_COLOR;
+      }
+      .tet {
+        width: 100px;
+        padding: 5px;
+        border: none;
+        border-left: 1px solid $Bd_COLOR;
+      }
+      .tit {
+        display: flex;
+        align-items: center;
+        padding: 0 10px;
+        border-left: 1px solid $Bd_COLOR;
+      }
+    }
+    .number {
+      display: flex;
+      margin-left: 50px;
+      .tit {
+        height:36px;
+        line-height:36px;
+        width:45px;
+      }
+      .tet {
+        width: 150px;
+        height: 36px;
+        padding: 5px;
+        border: 1px solid $Bd_COLOR;
+        border-radius: 2px;
+        background: transparent;
+        outline: none;
+        -webkit-appearance: none;
+        -moz-appearance: none;
+        appearance: none;
+        cursor: pointer;
+      }
+    }
+    .upload {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      width: 240px;
+      height: 135px;
+      margin-left: 20px;
+      background: #f8f8f8;
+      cursor: pointer;
+      position: relative;
+      i {
+        font-size: 28px;
+        color: $TEXT_666;
+      }
+      p {
+        font-size: 14px;
+        color: $TEXT_666;
+      }
+      .file {
+        position: absolute;
+        left: 0;
+        top: 0;
+        z-index: 3;
+        width: 100%;
+        height: 100%;
+        opacity: 0;
+        cursor: pointer;
+      }
+    }
+    .upload-text {
+      display: flex;
+      align-items: flex-end;
+      height: 135px;
+      margin-left: 10px;
+      font-size: 14px;
+      color: $TEXT_COLO;
+    }
+    .submit-btn {
+      display: block;
+      width: 150px;
+      height: 36px;
+      margin: 0 auto;
+      border: none;
+      outline: none;
+      border-radius: 2px;
+      background: #129992;
+      cursor: pointer;
+      -webkit-appearance: none;
+      -moz-appearance: none;
+      appearance: none;
+      font-size: 14px;
+      color: #fff;
     }
   }
 }
