--- a/src/style/router/teacher-center.scss
+++ b/src/style/router/teacher-center.scss
@@ -981,4 +981,126 @@ html {
       color: #fff;
     }
   }
+  //account
+  .cont-account {
+    padding: 0 20px;
+    .user-account {
+      .item-box {
+        display: flex;
+        align-items: center;
+        height: 70px;
+        padding: 0 30px;
+        border-bottom: 1px solid $Bd_COLOR;
+      }
+      .account-item-l {
+        width: 135px;
+        > i {
+          margin-right: 5px;
+          font-size: 22px;
+          color: $THEME_COLOR;
+        }
+        > span {
+          font-size: 18px;
+        }
+      }
+      .account-item-z {
+        width: 380px;
+        font-size: 12px;
+        color: $TEXT_666;
+      }
+      .account-item-r {
+        flex: 1px;
+        text-align: right;
+        .toggle {
+          cursor: pointer;
+          font-size: 14px;
+          color: #5381df;
+        }
+      }
+      .item-form {
+        display: none;
+        padding: 30px 0;
+      }
+      .form-component {
+        width: 500px;
+        margin: 0 auto;
+        .cell {
+          display: flex;
+          align-items: center;
+          height: 36px;
+          margin-top: 10px;
+        }
+        .cell-hd {
+          width: 120px;
+          font-size: 14px;
+          color: $TEXT_666;
+          text-align: right;
+        }
+        .cell-bd {
+          flex: 1;
+          display: flex;
+          .mobile {
+            font-size: 18px;
+            color: #1b1b1b;
+          }
+          .btn {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            width: 54px;
+            height: 36px;
+            margin-right: 10px;
+            border-radius: 3px;
+            font-size: 14px;
+            &.success {
+              border: 1px solid $THEME_COLOR;
+              background: $THEME_COLOR;
+              color: #fff;
+            }
+            &.cancel {
+              border: 1px solid $Bd_COLOR;
+              background: transparent;
+              color: $TEXT_666;
+            }
+          }
+        }
+        .cell-ft {
+          width: 100px;
+          text-align: right;
+          .link {
+            font-size: 14px;
+            color: #5381df;
+          }
+        }
+
+        .max-txt,
+        .min-inout {
+          width: 280px;
+          height: 36px;
+          padding: 5px 10px;
+          border: 1px solid $Bd_COLOR;
+          border-radius: 2px;
+          font-size: 14px;
+          color: #000;
+        }
+        .min-inout {
+          width: 148px;
+        }
+        .get-code {
+          width: 100px;
+          height: 36px;
+          margin-left: 10px;
+          outline: none;
+          border: none;
+          cursor: pointer;
+          font-size: 14px;
+          color: #fff;
+          background: $THEME_COLOR;
+          &.disabled {
+            background: #c1c1c1;
+          }
+        }
+      }
+    }
+  }
 }
