--- a/src/style/router/teacher-center.scss
+++ b/src/style/router/teacher-center.scss
@@ -1047,8 +1047,8 @@ html {
             display: flex;
             align-items: center;
             justify-content: center;
-            width: 54px;
             height: 36px;
+            padding: 0 12px;
             margin-right: 10px;
             border-radius: 3px;
             font-size: 14px;
