--- a/src/style/router/school-center.scss
+++ b/src/style/router/school-center.scss
@@ -711,5 +711,110 @@ html {
       border: 1px solid $Bd_COLOR;
       min-height: 736px;
     }
+    //edit
+    @at-root .school-edit {
+      padding: 20px 30px;
+      border: 1px solid $Bd_COLOR;
+      min-height: 800px;
+      .edit-block {
+        margin: 0 5px;
+        font-size: 14px;
+        color: $TEXT_666;
+        .block-tit {
+          height: 20px;
+          margin: 20px 0;
+          padding-left: 10px;
+          border-left: 4px solid #ccc7c6;
+          line-height: 20px;
+          font-size: 20px;
+          color: $TEXT_666;
+        }
+      }
+      .block-item {
+        display: flex;
+        margin-top: 20px;
+        .name {
+          width: 50px;
+          height: 36px;
+          padding-left: 5px;
+          line-height: 36px;
+        }
+        .txt {
+          width: 700px;
+          height: 36px;
+          padding: 5px;
+          border: 1px solid $Bd_COLOR;
+          border-radius: 2px;
+          background: transparent;
+          -webkit-appearance: none;
+          -moz-appearance: none;
+          appearance: none;
+          font-size: 14px;
+          color: #1d1d1d;
+        }
+        .textarea {
+          height: 110px;
+          resize: none;
+        }
+        .upload-img {
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          flex-direction: column;
+          width: 240px;
+          height: 140px;
+          position: relative;
+          background: #f7f7f7;
+          i {
+            font-size: 30px;
+            color: #a3a3a3;
+          }
+          img {
+            position: absolute;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+          }
+        }
+        .file {
+          position: absolute;
+          left: 0;
+          top: 0;
+          z-index: 2;
+          width: 100%;
+          height: 100%;
+          opacity: 0;
+          cursor: pointer;
+        }
+        .desc {
+          margin-left: 10px;
+          display: flex;
+          align-items: flex-end;
+          color: $TEXT_COLO;
+        }
+      }
+      .action {
+        margin-top: 20px;
+        .btn {
+          width: 150px;
+          height: 36px;
+          border: none;
+          margin-right: 20px;
+          border-radius: 2px;
+          outline: none;
+          background: transparent;
+          font-size: 14px;
+          color: #fff;
+          &.save {
+            background: $THEME_COLOR;
+          }
+          &.cancel {
+            border: 1px solid $Bd_COLOR;
+            color: $TEXT_666;
+          }
+        }
+      }
+    }
   }
 }
