--- a/src/style/router/school-center.scss
+++ b/src/style/router/school-center.scss
@@ -141,6 +141,33 @@ html {
         color: #ccc7c6;
       }
     }
+    .top-title {
+      height: 65px;
+      padding-left: 10px;
+      border-bottom: 2px solid $THEME_COLOR;
+      line-height: 63px;
+      font-size: 16px;
+      color: $THEME_COLOR;
+      .action {
+        display: block;
+        width: 90px;
+        height: 30px;
+        margin-top: 17px;
+        border: 1px solid $THEME_COLOR;
+        line-height: 28px;
+        text-align: center;
+        color: $THEME_COLOR;
+        font-size: 16px;
+        i {
+          font-size: 18px;
+        }
+      }
+      .plc {
+        float: right;
+        font-size: 14px;
+        color: $TEXT_666;
+      }
+    }
     //index
     @at-root .school-index {
       padding-bottom: 40px;
@@ -812,6 +839,353 @@ html {
           &.cancel {
             border: 1px solid $Bd_COLOR;
             color: $TEXT_666;
+          }
+        }
+      }
+    }
+    @at-root .school-resume {
+      padding: 20px;
+      background: #fff;
+      border: 1px solid $Bd_COLOR;
+      .prompt {
+        height: 70px;
+        margin: 0 10px;
+        line-height: 80px;
+        font-size: 14px;
+        color: $TEXT_COLO;
+        .iconfont {
+          margin: 0 5px;
+          color: $TEXT_ORANGE;
+        }
+        .action {
+          display: block;
+          width: 90px;
+          height: 30px;
+          margin-top: 17px;
+          border: 1px solid $THEME_COLOR;
+          line-height: 28px;
+          text-align: center;
+          color: $THEME_COLOR;
+          font-size: 16px;
+          i {
+            font-size: 18px;
+          }
+        }
+      }
+      .images {
+        margin: 0 10px;
+        .top-title {
+          margin: 0 10px;
+        }
+        li {
+          width: 204px;
+          height: 250px;
+          margin: 10px;
+          float: left;
+        }
+        .block-img {
+          height: 206px;
+          overflow: hidden;
+        }
+        .block-desc {
+          height: 44px;
+          overflow: hidden;
+          white-space: nowrap;
+          text-overflow: ellipsis;
+          line-height: 44px;
+          font-size: 14px;
+          color: $TEXT_666;
+          text-align: center;
+        }
+      }
+      .videos {
+        padding: 0 7px;
+        .top-title {
+          margin: 0 13px;
+        }
+        .prompt {
+          margin: 0 13px;
+        }
+        li {
+          width: 275px;
+          height: 210px;
+          float: left;
+          margin: 13px;
+        }
+        .block-img {
+          width: 275px;
+          height: 170px;
+          overflow: hidden;
+          position: relative;
+          .o-floor {
+            position: absolute;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            cursor: pointer;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            i {
+              width: 44px;
+              height: 44px;
+              text-align: center;
+              border-radius: 100%;
+              background: rgba(0, 0, 0, .6);
+              line-height: 40px;
+              font-size: 44px;
+              color: #fff;
+            }
+          }
+        }
+        .block-desc {
+          height: 40px;
+          overflow: hidden;
+          white-space: nowrap;
+          text-overflow: ellipsis;
+          line-height: 40px;
+          font-size: 14px;
+          color: $TEXT_666;
+          text-align: center;
+        }
+      }
+      .fixed-img {
+        display: none;
+        position: fixed;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        background: rgba(0, 0, 0, .4);
+        .upload-fixed-img {
+          position: absolute;
+          left: 50%;
+          top: 50%;
+          z-index: 100;
+          width: 980px;
+          height: 360px;
+          margin-left: -490px;
+          margin-top: -180px;
+          background: #fff;
+        };
+        .upload-tit {
+          height: 50px;
+          padding-left: 10px;
+          font-size: 16px;
+          line-height: 50px;
+          color: $TEXT_666;
+        }
+        .upload-box {
+          height: 260px;
+          padding: 20px 10px;
+          display: flex;
+          background: #f4f4f4;
+        }
+        .upload-box {
+          display: flex;
+        }
+        .file-box {
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          flex-direction: column;
+          width: 210px;
+          height: 220px;
+          margin: 0 10px;
+          border: 1px solid $Bd_COLOR;
+          position: relative;
+          i {
+            font-size: 60px;
+            color: #aaa;
+
+          }
+          p {
+            font-size: 14px;
+            color: $TEXT_666;
+          }
+        }
+        .file {
+          position: absolute;
+          left: 0;
+          top: 0;
+          opacity: 0;
+          width: 100%;
+          height: 100%;
+          cursor: pointer;
+        }
+        .item-img {
+          width: 210px;
+          height: 220px;
+          margin: 0 10px;
+          overflow: hidden;
+          border: 1px solid $Bd_COLOR;
+          position: relative;
+          .delete-img {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            width: 25px;
+            height: 25px;
+            position: absolute;
+            right: 0;
+            top: 0;
+            z-index: 20;
+            background: #ccc;
+            cursor: pointer;
+            font-size: 18px;
+            color: $TEXT_666;
+          }
+          input[type="text"] {
+            width:100%;
+            height: 35px;
+            font-size: 14px;
+            color: $TEXT_666;
+            padding: 0 10px;
+            background: #fff;
+            border: none;
+            outline: none;
+          }
+        }
+        .actions {
+          margin-top: 6px;
+          text-align: right;
+          button {
+            width: 56px;
+            height: 36px;
+            margin-right: 20px;
+            border-radius: 2px;
+            cursor: pointer;
+            outline: none;
+            background: transparent;
+            border: none;
+            font-size: 14px;
+            color: #fff;
+            &.save {
+              background: $THEME_COLOR;
+            }
+            &.cancel {
+              border: 1px solid $Bd_COLOR;
+              color: $TEXT_666;
+            }
+          }
+        }
+      }
+      .fixed-vid {
+        display: none;
+        position: fixed;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        background: rgba(0, 0, 0, .4);
+        .fixed-vid-box {
+          width: 850px;
+          height: 360px;
+          background: #fff;
+          position: absolute;
+          left: 50%;
+          top: 50%;
+          margin-top: -180px;
+          margin-left: -425px;
+        }
+        .fixed-vid-tit {
+          height: 40px;
+          padding: 0 10px;
+          font-size: 18px;
+          color: $TEXT_666;
+          line-height: 40px;
+        }
+        .vid-form {
+
+          margin-left: 145px;
+        }
+        .item-form {
+          margin-top: 20px;
+          display: flex;
+        }
+        .upload-box {
+          width: 150px;
+          height: 125px;
+          margin-left: 43px;
+          background: #e8e8e8;
+          position: relative;
+          .file {
+            position: absolute;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            cursor: pointer;
+            opacity: 0;
+          }
+          .vid-icon {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            height: 90px;
+            font-size: 60px;
+            color: #dedede;
+          }
+          p {
+            height: 35px;
+            font-size: 14px;
+            color: #fff;
+            background: #747474;
+            line-height: 35px;
+            text-align: center;
+          }
+        }
+        .desc {
+          margin-left: 10px;
+          display: flex;
+          align-items: flex-end;
+          font-size: 12px;
+          color: $TEXT_COLO;
+        }
+        .item-name {
+          height: 36px;
+          line-height: 36px;
+          font-size: 14px;
+          color: $TEXT_666;
+        }
+        .txt {
+          width: 185px;
+          height: 36px;
+          padding: 5px;
+          border: 1px solid $Bd_COLOR;
+          outline: none;
+          background: transparent;
+          border-radius: 2px;
+          font-size: 14px;
+          color: #353535;
+        }
+        .plc {
+          margin-left: 43px;
+          font-size: 12px;
+          color: $TEXT_COLO;
+        }
+        .actions {
+          margin-top: 20px;
+          text-align: right;
+          button {
+            width: 56px;
+            height: 36px;
+            margin-right: 20px;
+            border-radius: 2px;
+            cursor: pointer;
+            outline: none;
+            background: transparent;
+            border: none;
+            font-size: 14px;
+            color: #fff;
+            &.save {
+              background: $THEME_COLOR;
+            }
+            &.cancel {
+              border: 1px solid $Bd_COLOR;
+              color: $TEXT_666;
+            }
           }
         }
       }
