--- a/src/style/router/school-center.scss
+++ b/src/style/router/school-center.scss
@@ -291,7 +291,7 @@ html {
           }
         }
       }
-      .school-news {
+      .school-news1 {
         margin: 0 16px;
         .new-plate {
 
@@ -318,7 +318,7 @@ html {
         span {
         }
       }
-      .school-history {
+      .school-history1 {
         padding: 0 6px;
         .block-title {
           margin-left: 6px;
