--- a/src/style/router/student.scss
+++ b/src/style/router/student.scss
@@ -649,6 +649,174 @@ html {
           }
         }
       }
+      //user-details
+      .user-details {
+        .info-head {
+          display: flex;
+          align-items: center;
+          height: 190px;
+          padding: 20px;
+          .info-photo {
+            $size: 150px;
+            width: $size;
+            height: $size;
+          }
+          .info-details {
+            margin-left: 20px;
+            margin-top: 30px;
+            font-size: 14px;
+            color: #fff;
+          }
+          .info-name {
+            display: flex;
+            align-items: center;
+            font-size: 22px;
+            .vip {
+              height: 24px;
+              padding: 0 5px;
+              margin-left: 15px;
+              background: $TEXT_ORANGE;
+              border-radius: 2px;
+              font-size: 14px;
+              line-height: 24px;
+            }
+          }
+          .info-signature {
+            margin-top: 15px;
+          }
+          .info-address {
+            display: flex;
+            align-items: center;
+            margin-top: 15px;
+            i {
+              margin-right: 10px;
+              font-size: 16px;
+              color: #ccc7c6;
+            }
+          }
+        }
+        .info-item {
+          margin: 0 15px;
+          padding: 30px 40px;
+          border-bottom: 1px dashed $Bd_COLOR;
+          font-size: 14px;
+          color: $TEXT_666;
+          .info-title {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            font-size: 18px;
+            color: $THEME_COLOR;
+            a {
+              font-size: 12px;
+              color: #5381df;
+            }
+          }
+          .if-detail {
+            display: flex;
+            align-items: center;
+            margin-top: 10px;
+            span {
+              margin-right: 20px;
+            }
+          }
+          .if-phone {
+            display: flex;
+            align-items: center;
+            margin-top: 10px;
+            span {
+              margin-right: 20px;
+            }
+            i {
+              margin-right: 5px;
+              font-size: 16px;
+              color: $TEXT_COLO;
+            }
+          }
+          .if-learn {
+            display: flex;
+            margin-top: 10px;
+            .mt10 {
+              margin-top: 10px;
+            }
+            .learn-item {
+              margin-right: 90px;
+            }
+            .icon-text {
+              display: flex;
+              align-items: center;
+              font-size: 14px;
+              color: $TEXT_666;
+            }
+            .iconfont {
+              margin-right: 5px;
+              font-size: 30px;
+              color: #d2d2d2;
+            }
+            p {
+              text-align: center;
+              font-size: 14px;
+              color: $TEXT_666;
+              span {
+                color: $TEXT_ORANGE;
+              }
+            }
+          }
+          .history-details {
+            margin-top: 15px;
+            padding: 30px;
+            position: relative;
+            &::before {
+              content: ' ';
+              position: absolute;
+              left: 10px;
+              top: 0;
+              height: 100%;
+              width: 2px;
+              background: $Bd_COLOR;
+            }
+          }
+          .history-item {
+            font-size: 14px;
+            .time {
+              position: relative;
+              color: #1b1b1b;
+              &::before {
+                content: ' ';
+                width: 18px;
+                height: 18px;
+                background: #fff;
+                position: absolute;
+                left: -28px;
+                top: 0;
+              }
+              &::after {
+                content: ' ';
+                width: 10px;
+                height: 10px;
+                border-radius: 100%;
+                background: $Bd_COLOR;
+                position: absolute;
+                left: -24px;
+                top: 5px;
+              }
+            }
+            p {
+              color: $TEXT_666;
+            }
+            .img {
+              display: flex;
+              justify-content: center;
+              width: 175px;
+              height: 125px;
+              margin: 15px 0;
+              > img {
+                max-width: 100%;
+              }
+            }
+          }
+        }
+      }
     }
   }
 }
